Result box no longer gets taller when text is inserted; result rounds to 10 sigfigs...unnecessary for simple equations but helpful to truncate longer results...still working on this...

--- a/main.css
+++ b/main.css
@@ -15,6 +15,7 @@ button:hover {
 
 .key {
     width: 25%;
+    height: 20%;
     box-sizing: border-box;
     font-family: 'Open Sans';
 }
@@ -24,6 +25,7 @@ button:hover {
     justify-content: end;
     align-items: end;
     width: 75%;
+    height: 20%;
     box-sizing: border-box;
     border: 2px solid black;
     background-color: palevioletred;
